@@ -1,12 +1,12 @@
 AC_PREREQ(2.53)
-AC_INIT(libavg, 0.8.0, uzadow@libavg.de)
+AC_INIT(libavg, 0.9.0.pre1, uzadow@libavg.de)
 AC_CANONICAL_TARGET
 
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
 MAJOR_VERSION=0
-MINOR_VERSION=8
+MINOR_VERSION=9
 MICRO_VERSION=0
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION dnl
 
