@@ -1,3 +1,7 @@
+libavg 0.9.0.pre1 - August 9, 2009
+
+  svn revision 4046
+
 libavg 0.8.0 - September 22, 2008
 
   svn revision 3196
